[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Prefabs/Levels/NumberTiles/NumberTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Levels/Level_5/Numbers.gd" type="Script" id=2]

[node name="Numbers" type="Node"]
script = ExtResource( 2 )

[node name="Read1" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, -32 )

[node name="Read2" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, -32 )

[node name="Read3" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, -32 )

[node name="Write" parent="." instance=ExtResource( 1 )]
position = Vector2( 448, -32 )
readonly = false
